# personaplex-xpu

./: README.md  README.md_bak
moshi/: pyproject.toml  requirements.txt
moshi/moshi/: offline.py  server.py
moshi/moshi/models/: compression.py  lm.py  loaders.py
moshi/moshi/modules/: streaming.py  transformer.py
moshi/moshi/quantization/: vq.py
moshi/moshi/utils/: compile.py  sampling.py
